--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<ul>
+    {{#each notelist}}
+    <li><a href="/notes/view ?key={{ key }}">{{ title }}</a></li>
+    {{/each}} 
+</ul>
