--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 <ul>
     {{#each notelist}}
-    <li><a href="/notes/view ?key={{ key }}">{{ title }}</a></li>
-    {{/each}} 
+    <li>{{ key }}:
+        <a href="/notes/view ?key={{ key }}">{{ title }}</a>
+    </li>
+    {{/each}}
 </ul>
