--- a/views/noteview.hbs
+++ b/views/noteview.hbs
@@ -1,10 +1,8 @@
-{{#if note}} <h3>{{ note.title }}</h3>{{/if}}
-{{#if note}} <p>{{ note.body }}</p>{{/if}}
+{{#if note}}<h3>{{ note.title }}</h3>{{/if}}
+{{#if note}}<p>{{ note.body }}</p>{{/if}}
 <p>Key: {{ notekey }}</p>
-{{#if notekey}}
+{{#if notekey }}
     <hr/>
-    <p>
-        <a href="/notes/destory?key={{notekey}}">Delete</a>
-        <a href="/notes/edit?key={{notekey}}">Edit</a>
-    </p>
+    <p><a href="/notes/destroy?key={{notekey}}">Delete</a>
+     | <a href="/notes/edit?key={{notekey}}">Edit</a></p>
 {{/if}}
